# dex

./: .gitignore  Cargo.toml  dex-spec.md
src/: config.rs  main.rs
src/embed/: chunker.rs  download.rs  mod.rs  model.rs
src/index/: mod.rs  state.rs  tantivy_index.rs  vector.rs
src/output/: format.rs
src/parse/: content.rs  metadata.rs  mod.rs  session.rs  tools.rs
src/query/: filters.rs  hybrid.rs  mod.rs  semantic.rs  text.rs
